@@ -63,12 +63,6 @@ public class XML {
 
     /**
      * Replace special characters with XML escapes:
-     * <pre>
-     * &amp; <small>(ampersand)</small> is replaced by &amp;amp;
-     * &lt; <small>(less than)</small> is replaced by &amp;lt;
-     * &gt; <small>(greater than)</small> is replaced by &amp;gt;
-     * &quot; <small>(double quote)</small> is replaced by &amp;quot;
-     * </pre>
      * @param string The string to be escaped.
      * @return The escaped string.
      */
@@ -316,14 +310,14 @@ public class XML {
         try {
             char initial = string.charAt(0);
             if (initial == '-' || (initial >= '0' && initial <= '9')) {
-                Long value = new Long(string);
+                Long value = Long.valueOf(string);
                 if (value.toString().equals(string)) {
                     return value;
                 }
             }
         }  catch (Exception ignore) {
             try {
-                Double value = new Double(string);
+                Double value = Double.valueOf(string);
                 if (value.toString().equals(string)) {
                     return value;
                 }
